[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Rien.mw
+++ b/Rien.mw
@@ -140,7 +140,7 @@ Wat kilometers ten westen van [[Emmerik]] geet den Rien Duutsland uut en streumt
 * [[Zutfent]] (r)
 * [[Deventer]] (r)
 * [[Zwolle]] (r)
-* [[Kampen]] (l)
+* [[Kampen (Overiessel)|Kampen]] (l)
 * [[Iesselmuden]] (r)
 
 === Lengs den [[Krommen Rien]] en [[Olden Rien (Harmelen-Noordzee)|Olde Rien]] ===
