[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Muntrecht.mw
+++ b/Muntrecht.mw
@@ -41,7 +41,7 @@ Dit is ne lieste van steedn in et Nedersaksiese gebeed dee muntrecht hebt.
 *[[Almelo]]
 *[[Deventer]]
 *[[Hasselt]]
-*[[Kampen]]
+*[[Kampen (Overiessel)|Kampen]]
 *[[De Kuunder (Stienwiekerlaand)|De Kuunder]]
 *[[Veno]]
 *[[Voorst]]
