[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Lieste_van_Nederlaandse_plaetse_mit_veurmoalige_stadsrechten.mw
+++ b/Lieste_van_Nederlaandse_plaetse_mit_veurmoalige_stadsrechten.mw
@@ -100,7 +100,7 @@ Den tookenning van stadsrechten hef sinds de [[Groandwetsherzening van 1848|herz
 *[[Ielst]] 1268
 *[[Iesselstein]] 1331
 *[[Iezendieke]] 1303
-*[[Kampen]] 1236
+*[[Kampen (Overiessel)|Kampen]] 1236
 *[[Kessel]] 1312
 *[[Keppel]] 1404
 *[[Klundert]] 1357
