[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Lieste_van_stadspoorten_in_Nederlaand.mw
+++ b/Lieste_van_stadspoorten_in_Nederlaand.mw
@@ -143,7 +143,7 @@ Hierunder ne lieste van (veurmoalige) [[Stadspoorte|stadspoort]]en in [[Nederlaa
 *[[Oosterpoorte (Hoorn)|Oosterpoorte]]
 *[[Westerpoorte (Hoorn)|Westerpoorte]]
 
-==[[Kampen]]==
+==[[Kampen (Overiessel)|Kampen]]==
 *[[Brooderpoorte]]
 *[[Cellebrooderspoorte]]
 *[[Hagenpoorte]]
