--- a/Roevène.mw
+++ b/Roevène.mw
@@ -4,7 +4,7 @@ In 't centrum an 't Kerkplein hej de grote [[Hervormd]]e karke. Wieder bint d'r 
 
 D'r is een jonge dörpskern. Mit 't uutbreidingsplan Rouveen-West III bouwt ze veural in eing beheer sund 2004 een bulte ni'jbouwwonings.
 
-Op Roevène hej drei basisskoelen. Veur 't voortgezet onderwies gaot de kiender naor skoelen in plaatsen as Stappest, [[Möppelt]], [[Iesselmuun]], [[Kampen]], [[Ni'jlusen]] en [[Zwolle]].
+Op Roevène hej drei basisskoelen. Veur 't voortgezet onderwies gaot de kiender naor skoelen in plaatsen as Stappest, [[Möppelt]], [[Iesselmuun]], [[Kampen (Overiessel)|Kampen]], [[Ni'jlusen]] en [[Zwolle]].
 
 ==Cultuur==
 In vergelieking mit Stappest is 't antal vrouwlu det nog in [[klederdracht]] löp bedudend leger. Nog wal beholdt ze op 't dörp de zundagsröst.
