[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/1236.mw
+++ b/1236.mw
@@ -4,7 +4,7 @@
 
 == Gebeurtenissen ==
 *[[20 januari]] - Könning [[Hendrik III van Engelaand]] trouwt prinsesse [[Eleonora van Provence]].
-*[[Kampen]] ([[Nederlaand]]) kreg [[stadsrechten]].
+*[[Kampen (Overiessel)|Kampen]] ([[Nederlaand]]) kreg [[stadsrechten]].
 *[[Deutekem]] ([[Nederlaand]]) kreg [[stadsrechten]].
 *[[Batu Khan]] sticht et [[kanoat (vörstendom)|kanoat]] van de [[Golden Horde]].
 * In den [[Slag bi-j Šiauliai]] ([[Litouwen]]) wödt de [[Orde van de Zwoardbroders]] nen groten slag too-ebracht.
