[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Noordeinde_(Oldebroek).mw
+++ b/Noordeinde_(Oldebroek).mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Noordeinde_Stoomgemaal.jpg|thumb|Schaosen bie 't veurmaolige stoomgemaol in Noordeinde.]]
-'''Noordeinde''' is een [[darp|därpien]] mit zo'n 200 inwoeners. 't Lig an 't [[Drontermeer]] tussen [[Kampen]] en [[Elburg]] in. 't Darp beheurt tot de [[Gelderlaand|Gelderse]] gemeente [[Oldebroek]].
+'''Noordeinde''' is een [[darp|därpien]] mit zo'n 200 inwoeners. 't Lig an 't [[Drontermeer]] tussen [[Kampen (Overiessel)|Kampen]] en [[Elburg]] in. 't Darp beheurt tot de [[Gelderlaand|Gelderse]] gemeente [[Oldebroek]].
 
 Noordeinde hef zien name te danken an 't feit dät 't de meest noordelijke plase van Gelderlaond is.
 
