[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Ulk.mw
+++ b/Ulk.mw
@@ -76,8 +76,8 @@ De ulk is [[endemie (biogeografie)|endemisch]] veur [[Europa (continent)|Europa]
 **''bunseling'' ([[Ommen]])
 **''bulsing'' ([[Ommen]])
 **''bulsink'' ([[Ommen]] en [[Niej-Heeten]])
-**''bulsik'' ([[Ommen]], [[Dalsen]], [[Asselt]], [[Kampen]], [[Windesheim]] en [[Wieje]])
-**''bunzing'' ([[Zwolle]], [[Kampen]] en [[Dèventer]])
+**''bulsik'' ([[Ommen]], [[Dalsen]], [[Asselt]], [[Kampen (Overiessel)|Kampen]], [[Windesheim]] en [[Wieje]])
+**''bunzing'' ([[Zwolle]], [[Kampen (Overiessel)|Kampen]] en [[Dèventer]])
 *[[Tweants]]: ''ulk''
 |}
 
