--- a/Urker_taolwezer.mw
+++ b/Urker_taolwezer.mw
@@ -15,7 +15,7 @@ Et '''[[Urkers]]''' wort espruken op et vuurmaolige eilaand [[Urk]]. Et beoort m
 |[[Flevolaand]]
 |Flevoland
 |-
-|[[Kampen|Kaampen]]
+|[[Kampen (Overiessel)|Kaampen]]
 |Kampen
 |-
 |[[Veno|Velo]]
