[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Klaasje_Rotstein-van_den_Brink.mw
+++ b/Klaasje_Rotstein-van_den_Brink.mw
@@ -1,4 +1,4 @@
-'''Klaasje Rotstein-van den Brink''', algemien bekend als '''Klazien uut Zalk''' of '''Kleusien uut Zalk''' ([[13 meert]] [[1919]] – [[5 juni]] [[1997]]) was een anbeveelster van [[alternatieve geneeskunde|netuurlijke geneesmiddels]] en deurgeefster van traditionele vertellegies en zegswiezen. Heur bi'jname verwis naor heur dörp [[Zalk]] in de [[Oaveriessel]]se gemiente [[Kampen]].
+'''Klaasje Rotstein-van den Brink''', algemien bekend als '''Klazien uut Zalk''' of '''Kleusien uut Zalk''' ([[13 meert]] [[1919]] – [[5 juni]] [[1997]]) was een anbeveelster van [[alternatieve geneeskunde|netuurlijke geneesmiddels]] en deurgeefster van traditionele vertellegies en zegswiezen. Heur bi'jname verwis naor heur dörp [[Zalk]] in de [[Oaveriessel]]se gemiente [[Kampen (Overiessel)|Kampen]].
 
 ==Bezigheden en uutwarking==
 Kleuzien wördden machtig populair deur heur tillevisieoptredens in 1989-1990 in 't [[NCRV]]-pregramma ''Passage'', daoras ze netuurmiddels anbeveul veur een hiele riege kwaalties. Oaver dizze onderwarpen hef ze ok boekeri'je uutegèven; drei boeken haalden de Libris Top 10. Veul journalisten en pregrammamakers, waoronder [[Rik Felderhof]], waren riegelmaotig bi'j heur te gast. D'r wördden ok een speciaole Klazien-geurliende op de mark ebrocht en Kleusien maakten een plaotien mit [[André van Duin]].
