*Empty MediaWiki Message*

--- a/Alexia_van_Nederlaand.mw
+++ b/Alexia_van_Nederlaand.mw
@@ -30,3 +30,4 @@ Heur persoonlike titel is Preensesse. Nao heur heit Willem-Alexander en heur ool
 [[pl:Aleksja (księżniczka holenderska)]]
 [[pt:Alexia dos Países Baixos]]
 [[sv:Alexia av Nederländerna]]
+[[ko:알렉시아 공주]]
