--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -26,6 +26,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grönnegs]]: 
 **''brik(ke)''
 **''bakstain(e)''
+**''tiggel'' (Baksteenfabriek > Tiggelwaark)
 *[[Stellingwarfs]]: ''bakstien''
 *[[Tweants]]: ''bakstean, baksteen, bakkeie''
 *[[Veluws]]:
