--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -301,6 +301,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: 
 **''blökken''
+*[[Grönnegs]]:
+**''belken'', ''bölken'' (ook NL: schreeuwen)
+**''blavven'' (nait van n hond, mor van mìns, bv. as er schèlden dut of slim housten mout)
 *[[Tweants]]:
 **''blekn''
 *[[Veluws]]: ''bleuken'', ''blaffen''
