--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -377,6 +377,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: 
 **''bölken'' (ni-jsassies veur kola: bölkwater)
+*[[Grönnegs]]: 
+**''belken'', ''bölken'' (verolderd)
+**''boer lôten'' (maist broekt)
 *[[Tweants]]:
 **''bulk(e)n''
 
