--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -954,7 +954,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''naiber''
 **''noaberske''/''naiberske'' (''buurvrouw'')
 ***Van oosprong verwees allend t dail ''-ber'' noar ''buur'' as letterliekse vertoalen. t Dail "noa" betaikent "dicht bie" (zai ook t Duutse "in der Nähe" = "in de buurt"). "Noaber" kin den ook letterlieks vertoald worden as "nabuur" (naburig persoon). 
-*[[Oostfreisk]]: ''nouber'' (Platduutske skriefwies: ''nahber'')
+**''buur'' (verhollaandst)
+*[[Oostfreisk]]: ''nouber'' (Platduutske skriefwies: ''Nahber'')
 *[[Sallaans]]: ''naober''
 *[[Stellingwarfs]]: ''naober''
 *[[Tweants]]: ''noaber'', mv. ''noabers'' (mangs ook ''noawas'')
