--- a/Nedersaksisch_A.mw
+++ b/Nedersaksisch_A.mw
@@ -104,6 +104,16 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit A begunt''' oet 't [[Neders
 **'''''[[naojem]]''''' ([[Putten]], [[Nunspeet]] e.u.)
 **''lucht'' ([[Speuld]])
 
+==Alcohol==
+*[[Nederlands]]:
+**''alcohol''
+**''ethanol'' (chemische naam voor drinkbaar alcohol)
+**''procentjes''
+
+*[[Grönnegs]]:
+**''Draank'' (bv. "Doe magst nait van dat spul, doar zit draank ien.")
+**''Aalkol'' (t pure spul, maisttieds broekt as t nait drinkboar is)
+
 ==Appelmoes==
 *[[Nederlands]]: ''appelmoes''
 
