--- a/Nedersaksisch_A.mw
+++ b/Nedersaksisch_A.mw
@@ -111,8 +111,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit A begunt''' oet 't [[Neders
 **''procentjes''
 
 *[[Grönnegs]]:
-**''Draank'' (bv. "Doe magst nait van dat spul, doar zit draank ien.")
-**''Aalkol'' (t pure spul, maisttieds broekt as t nait drinkboar is)
+**''draank'' (bv. "Doe magst nait van dat spul, doar zit draank ien.")
+**''aalkol'' (t pure spul, maisttieds broekt as t nait drinkboar is)
 
 ==Appelmoes==
 *[[Nederlands]]: ''appelmoes''
