*Empty MediaWiki Message*

--- a/Nedersaksisch_Z.mw
+++ b/Nedersaksisch_Z.mw
@@ -119,29 +119,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit Z begunt''' oet 't [[Neders
 **''boven''
 **''op de balk{{small()|en}}''
 
-==Zuipen==
-*[[Nederlands]]: ''zuipen''
-
-*[[Achterhooks]]: 
-**''zoepen''
-**''boezen''
-*[[Drèents]]: ...
-*[[Grönnegs]]: 
-**''zoepen''
-**''doen{{small()|t}}jen'' (lett. dronken worden)
-*[[Sallaans]]: ...
-*[[Stellingwarfs]]: ''zoepen''
-*[[Tweants]]:
-**''zoepn'''
-**''sleutn''
-**''tuln'' (oorsproonkelike betekenis. Rechtevoort beduudt t mear "doemzoegen")
-*[[Urkers]]: ...
-*[[Veluws]]: 
-**''zupen'' 
-**''drinken''
-
-==Zun==
-*[[Nederlands]]: ''zunne'' of ''zon{{small()|neken}}''
+==Zon==
+*[[Nederlands]]: ''zon''
 
 *[[Achterhooks]]: ''zunne''
 *[[Drèents]]: ''zun{{small()|ne}}'', ''luie Evert''
@@ -168,6 +147,27 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit Z begunt''' oet 't [[Neders
 *[[Veluws]]: ''hoed''
 
 <nowiki>*</nowiki>In Tweante/Op de Veluwe hadn de woarkleu vroger ne pette op. Nen hood was vuur de hoge hearn. Leu met nen hood op wordt verdacht van ''oet de heugte doon''.
+
+==Zuipen==
+*[[Nederlands]]: ''zuipen''
+
+*[[Achterhooks]]: 
+**''zoepen''
+**''boezen''
+*[[Drèents]]: ...
+*[[Grönnegs]]: 
+**''zoepen''
+**''doen{{small()|t}}jen'' (lett. dronken worden)
+*[[Sallaans]]: ...
+*[[Stellingwarfs]]: ''zoepen''
+*[[Tweants]]:
+**''zoepn'''
+**''sleutn''
+**''tuln'' (oorsproonkelike betekenis. Rechtevoort beduudt t mear "doemzoegen")
+*[[Urkers]]: ...
+*[[Veluws]]: 
+**''zupen'' 
+**''drinken''
 
 ==Zus==
 *[[Nederlands]]: 
