--- a/Nedersaksisch_L.mw
+++ b/Nedersaksisch_L.mw
@@ -147,7 +147,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit L begunt''' oet 't [[Neders
 **''herebeestien''
 **''leivenheerstiekie''
 **''zeuntien''
-*[[Grunnegs]]: ''laiveneertiekje''
+*[[Grunnegs]]: 
+**''laiveneerke'', ''laiveneertje''
+**''laiveneertiekje''
 *[[Platduuts]]: ''zunnenkuken'' (Platduutse schriefwieze ''Sünnenküken'') 
 *[[Stellingwarfs]]: ''kroontien, herenhoentien''
 *[[Tweants]]: 
