--- a/Nedersaksisch_L.mw
+++ b/Nedersaksisch_L.mw
@@ -295,6 +295,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit L begunt''' oet 't [[Neders
 ** ''wil t?'' = ''lukt het?'' (aksie)
 ** ''t is lukt'' = ''het is gelukt'' (resultoat)
 ** ''aargens mit kloar worden'' 
+** ''t kloar kriegen''
 * [[Sallaands]]:
 **''lukken''
 **''willen''
