--- a/Nedersaksisch_G.mw
+++ b/Nedersaksisch_G.mw
@@ -144,6 +144,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit G begunt''' oet 't [[Neders
 *[[Nederlands]]: ''gierton''
 
 *[[Achterhooks]]: ''ale-koare'' (oet-esprokken as koowàre)
+*[[Grönnegs]]: 
+**''jier-/jirre-/jidderwoagen''
+**''strontwoagen''
 *[[Tweants]]: ''gierkoare''
 
 ==Gier uitrijden==
