--- a/Nedersaksisch_G.mw
+++ b/Nedersaksisch_G.mw
@@ -158,8 +158,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit G begunt''' oet 't [[Neders
 
 ==Gieten (regenen)==
 *[[Nederlands]]: 
-*''gieten'' (hard regenen)
-*''pijpestelen regenen''
+**''gieten'' (hard regenen)
+**''pijpestelen regenen''
 
 *[[Achterhooks]]: 
 *[[Drèents]]: 
@@ -171,7 +171,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit G begunt''' oet 't [[Neders
 *[[Stellingwarfs]]: 
 *[[Tweants]]: 
 *[[Urkers]]: 
-*[[Veluws]]: 
+*[[Veluws]]:
 
 ==Gluren==
 *[[Nederlands]]: ''gluren''
