--- a/Nedersaksisch_M.mw
+++ b/Nedersaksisch_M.mw
@@ -40,7 +40,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 ==Maïs==
 * [[Nederlands]]: ''maïs''
 
-*[[grönnegs]]:
+*[[Grönnegs]]:
 **''mais'' (plaant)
 **''tusselwaait{{small()|en}} (vrucht, stof)
 *[[Tweants]]: ''mais''
