--- a/Nedersaksisch_M.mw
+++ b/Nedersaksisch_M.mw
@@ -306,6 +306,11 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 * [[Urkers]]: ...
 * [[Veluws]]: ''mes''
 
+==Mestsilo==
+*[[Nederlands]]: ''mestsilo''
+
+*[[Grönnegs]]: ''stronttank''
+
 ==Mier==
 * [[Nederlands]]: ''mier''
 *[[Achterhooks]]: '''''[[miegamp]]''''', ''empe''
