--- a/Nedersaksisch_M.mw
+++ b/Nedersaksisch_M.mw
@@ -453,7 +453,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 * [[Nederlands]]: ''mol''
 
 * [[Achterhooks]]: ''weule''
-* [[Grönnegs]]: ''mool''/''mole'', ''mol''
+* [[Grönnegs]]: ''mool''/''mole'', ''mòl''/''mòle''
 * [[Tweants]]: 
 **'''''[[weule]]'''''
 **''vroot''
