--- a/Nedersaksisch_H.mw
+++ b/Nedersaksisch_H.mw
@@ -138,7 +138,10 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit H begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''ho''
 *[[Drèents]]: ''ho'', ''hoe'', ''hoou''
-*[[Grönnegs]]: ''hou'' 
+*[[Grönnegs]]: 
+**''hou'' 
+**''wou'' (hail verolderd; van de generoatsie dij veur 1900 geboren is)
+**''woe'' (WEV)
 *[[Oostfreisk]]:
 **''hou'' (Börkem; Platduutske skriefwies: ''ho'')
 **''wo''
