--- a/Nedersaksisch_O.mw
+++ b/Nedersaksisch_O.mw
@@ -57,6 +57,9 @@ Bijvoorbeeld van touw.
 **''onrustig''
 **''ongedurig''
 *[[Achterhooks]] : ''empereg''
+*[[Grönnegs]]:
+**''rouerg''
+**''wummeleg''
 *[[Tweants]]:
 **''jachterig''
 **''bis op de hoed hebn''
