--- a/Nedersaksisch_O.mw
+++ b/Nedersaksisch_O.mw
@@ -216,6 +216,9 @@ Bijvoorbeeld van touw.
 
 *[[Achterhooks]]: 
 **''zich waren'' (zw), vb: waart ow! = Pas op!
+*[[Grönnegs]]:
+**''oetkieken''
+**''verdacht/-docht wezen (op)''
 *[[Tweants]]:
 **''zik waarn'', ''~ woarn''
 **''zik baargen/boargen/beargen'' (vb: baarget oe! = pas op)
