--- a/Nedersaksisch_O.mw
+++ b/Nedersaksisch_O.mw
@@ -218,6 +218,7 @@ Bijvoorbeeld van touw.
 **''zich waren'' (zw), vb: waart ow! = Pas op!
 *[[Grönnegs]]:
 **''oetkieken''
+**''oppazen''
 **''verdacht/-docht wezen (op)''
 *[[Tweants]]:
 **''zik waarn'', ''~ woarn''
