/* Proost (heffen van het glas) */

--- a/Nedersaksisch_P.mw
+++ b/Nedersaksisch_P.mw
@@ -398,7 +398,10 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 
 *[[Achterhooks]]: ...
 *[[Drèents]]: ...
-*[[Grönnegs]]: ...
+*[[Grönnegs]]:
+**''prut''
+**''proost''
+**''Hee''
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: 
