--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -80,6 +80,10 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 *[[Achterhooks]]: 
 **''veuren'' (zw), veurden, eveurd  (met den auto)
 **''rieden'' (st), hi-j rid, reden, ereden  (met de fietse, auto, of op et peerd)
+*[[Grönnegs]]:
+**''rieden''
+**''voaren'' (vrouger meer gebroekt as rieden)
+**''broezen'' (haard rieden)
 *[[Tweants]]:
 **''jaagn''
 **''veurn''
