--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -94,8 +94,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''sligtemutse''
 *[[Drèents]]: ...
-*[[Grönnegs]]: 
-**''pool''
+*[[Grönnegs]]: ''pool''
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: ...
