--- a/Nedersaksisch_S.mw
+++ b/Nedersaksisch_S.mw
@@ -344,6 +344,14 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit S begunt''' oet 't [[Neders
 **''sneeuw''
 **''snieuw'' ([[Hoevelaken]])
 
+==Snel==
+*[[Nederlands]]: ''snel''
+
+*[[Grönnegs]]:
+**''gaauw'' (bie n termijn) 
+**''vlot'' (voak over gebeurtenizzen ien t verleden)
+**''haard'' (veurtbewegen: rieden, lopen, voaren ezw.)
+
 ==Snoep==
 *[[Nederlands]]: ''snoep''
 
