/* Vallen */ - snappen joe wat ik hiermit bedoul?

--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -147,6 +147,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 **''dondern''
 **''mietern''
 **''kukeln'' (over t raandje ~)
+***De eerste vaaier sloan veuraal op t neerkommen, ien tieds dat de lèste (kukeln) meer t prozes van t valen omvat, dus van t stoan, tot de reden (bv. strukeln) en t noar beneden goan, mòr t aanroaken van de grond ozw. wordt hier maisttieds nait mit bedould.
 * [[Tweants]]: 
 **''valn'' 
 **''vuur/teegn de vlakte/vloere/groond/t groondhoolt goan
