--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -201,7 +201,10 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 *[[Grönnegs]]: 
 ** ''veen''
 ** ''klain''
-*[[Oostfreisk]]: ''veen'' (Platduutske skriefwies: ''fehn'')
+** ''moor'' (geogroafisch, Nl: ''wij wonen in het veen'')
+*[[Oostfreisk]]: 
+**''veen'' (Platduutske skriefwies: ''fehn'')
+**''moor'' (geogroufisk, Hdt: ''wir wohnen im Fehn'')
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: '''''[[vene (grondsoorte)|vene]]'''''
 *[[Tweants]]:
