--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -270,6 +270,9 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 
 *[[Achterhooks]]:
 **''verspöllen''
+*[[Grönnegs]]:
+**''verspeulen''
+**''verlaizen''
 
 ==Verliezen (kwijtraken)==
 *[[Nederlands]]: ''verliezen''
