--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -280,6 +280,9 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 *[[Achterhooks]]:
 **''kwiet wodden'' 
 **''verlezen''
+*[[Grönnegs]]:
+**''kwietworden'' (as aine der wat aan doun kin/kon)
+**''kwietroaken'' (as aine der niks aan doun kin/kon)
 
 ==Verweerd==
 *[[Nederlands]]: ''verweerd''
