--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -292,8 +292,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 *[[Grönnegs]]: ''t Weer het der ien kommen'' (= Het is verweerd)
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
-*[[Tweants]]: 
-**''verspikt''
+*[[Tweants]]: ''verspikt''
 *[[Urkers]]: ...
 *[[Veluws]]:
 **''verweerd''
