--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -371,8 +371,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 ** ''markolder''
 *[[Drèents]]: ''marklover'' ([[ZW]]), ''-leuver'' of ''-loper'' ([[ZWZ]]), ''-loze'' ([[Rune]]), ''-rover''
 *[[Graafschopper Platt]]: ''markloawe'' (Platduutse schriefwieze ''Markloawe'')
-*[[Grönnegs]]: 
-**''holtoakster''
+*[[Grönnegs]]: ''holtoakster''
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]:
 **''hooltakster'', ''hooltekster''
