--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -512,6 +512,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 ==Vlinderdas==
 *[[Nederlaands]]: ''vlinderdas'', ''~strik''
 
+*[[Grönnegs]]: ''vlinderdaas'' 
 *[[Tweants]]: ''muusken''
 
 ==Voederbiet==
