*Empty MediaWiki Message*

--- a/Grunnegs_(zegswiezen).mw
+++ b/Grunnegs_(zegswiezen).mw
@@ -1,338 +1,277 @@
-Veul '''Grunnegse zegswiezen''' wieken ôf van dijent ien t [[Nederlaands]]. Ook n hail ìnde wieken ôf van t [[Nedersaksisch|Leegsaksisch]], woardeur de maiste zegswiezen typisch [[Grunnegs]] binnen. Ien t Grunnegs Nederlaands worden dizze zegswiezen sums letterlieks vertoald, woardeur der wel ais misverstanden ontstoan. Hieronder stoan n aantel van dizze zegswiezen.
+Veul '''Grunnegse zegswiezen''' wieken ôf van dijent ien t [[Nederlaands]]. Ook n hail ìnde wieken ôf van t [[Nedersaksisch|Leegsaksisch]], woardeur de maiste zegswiezen typisch [[Grunnegs]] binnen. Ien t Grunnegs Nederlaands worden dizze zegswiezen sums letterlieks vertoald, woardeur der wel ais misverstanden ontstoan. Hieronder stoan n aantel van dizze zegswiezen. As der ien t veurbeeld A en B stoan, betaikent dit nait twij verschaaidene meugelkheden, môr n dialoog tuzzen persoon A en persoon B.
+
+== Aaldoagse zegswiezen ==
+Dit binnen zegswiezen dij ien gewone, aaldoagse zinnen veurkommen. Hierbie mouten joe veuraal denken aan dailen van zinnen. Veur oetdrokkens dij aigelks op zokzulf al n zin binnen, mouten joe ien t vòlgende heufdstok kieken.
 
 {| {{prettytable}} width="70%"
 |- style="background: #efefef;"
 ! width="35%" |Grunnegs
-! width="35%" |Nederlaands
+! width="35%" |Betaikenis
+! width="35%" |Veurbeeld
 |-
-|Aaigenst(e) wezen
-''Os pa en opa heur noamen binnen aaigenst''
-|Overeenkomen/ hetzelfde zijn
-''Vader's en opa's naam komen met elkaar overeen/zijn hetzelfde''
+|Aan bod wezen
+|Aan de beurt zijn
+|Ik was aan twijde aan bod om te proaten.
 |-
-|Aan bod wezen 
-''Dij vraauw is nou aan bod''
-|Aan de beurt zijn 
-''Die mevrouw is nu aan de beurt''
-|-
-|Aarngs de handen noa stoan hebben
-''Wat vaarven aangaait, stoan mien handen der nait noa'' 
+|Aargens de haand noa stoan hebben
 |Ergens handig/goed in zijn
-''Ik ben slecht in verven''
+|Mien handen stoan mie nait noar vaarven. 
 |-
-|Aarngs n hap en n snap van waiten
-''Ik wait overaal n hap en snap van'' 
-|Ergens een beetje verstand van hebben
-''Ik heb overal maar een klein beetje verstand van''
+|Aargens n hap en n snap van ôf waiten
+|Ergens slecht een klein beetje van weten
+|Mien ma wait n hap en n snap van komputers
 |-
 |Aargens flaauw van wezen
-''Ik wordt flaauw van dien gesoes''
-|Ergens genoeg van hebben/ergens moe van worden
-''Ik heb genoeg/wordt moe van je gezeur''
+|Ergens genoeg van hebben
+|Ik wordt flaauw van dien gezoes
 |-
-|Aarngs om tou
-''Ridst nou om kìrk tou'' 
+|Aargens om tou
 |Ergens omheen
-''Je rijdt nu om de kerk heen''
+|Wie rieden om kìrk tou
 |-
-|Aarngs verlet om/van hebben 
-''Ik heb gain verlet van dien gesoes''
-|Iets nodig hebben (zie ook [[Grunnegs_%28biezundere_woorden%29#Verlet|verlet]])
-''Ik heb jou gezeur niet nodig''
+|Aargens verlet van hebben
+|Iets nodig zijn (zie ook: [[Grunnegs_(biezundere_woorden)#Verlet|verlet]])
+|Ik heb gain verlet van dien gezoes
 |-
-|Aarngs wat mit (van) neudeg hebben
-''Doar heb ik niks mit neudeg''
+|Aargens wat mit neudeg wezen
 |Ergens iets mee te maken hebben
-''Daar heb ik niks mee te maken''<br />
-''Daar wil ik niks mee te maken hebben''
+|Niks mit neudeg, doe dust gewoon wat ik zèg.
 |-
-|Aarngs wies mit wezen
-''Doar bin ik ja wies mit''
-|Ergens blij/tevreden mee zijn/ iets koesteren
-''Wat ben ik daar blij mee''
+|Aargens wies mit wezen
+|Ergens blij mee zijn/iets koesteren
+|Ik bin hail wies mit dien kado
 |-
-|Ain stain kin gain mostert moalen
-|Je kunt meer met z'n tweeën dan alleen
-|-
-|Aine kin boeren, aander nait
-|Je hebt het of je hebt het niet 
+|Aigenste wezen
+|Overeenkomen, hetzelfde zijn
+|Os pa en opa heur noam binnen aigenste.
 |-
 |Aine onder t mous stoppen
-''Doe stopst hom aingoal onder t mous''
 |De baas spelen over iemand
-''Je speelt constant de baas over hem''
+|Most ophoalen mien zeun onder t mous te stoppen!
 |-
 |Aine wachten mit linker haand
-''Wie wachten joe mit linker haand''
 |Alvast beginnen met eten
-''We zijn alvast begonnen met eten''
+|t Spiet mie, mor wie binnen hebben joe mit linker haand wacht.
 |-
-|Aine wat begroten 
-''Dat aarme wicht begroot mie echt''
-|Zich ergens zorgen om maken/iets duur vinden
-''Ik maak me zorgen om dat arme meisje''
+|Aine wat begroten (1)
+|Iets te duur vinden
+|Dij boksem van 100 uro begroot mie.
+|-
+|Aine wat begroten (2)
+|Medelijden hebben met/spijt hebben van/voor ([[Engels|en]]: to be sorry (for) ...)
+|Dat wicht dij weer ien t zaikenhoes ligt begroot mie slim.
 |-
 |Aine wat gewoon wezen
-''Dat is mie gewoon''
 |Iets gewend zijn
-''Dat ben ik gewend''
+|Leven op t plattelaand is mie gewoon.
 |-
-|Aine wat tou lieken
-''Dat liekt mie n Frais tou''
-|Denken dat iets zo is (zie ook: [[Grunnegs_%28biezundere_woorden%29#Tou_lieken|Tou lieken]])
-''Ik denk dat dat een Fries is''
+|Aine wat toulieken
+|Denken dat iets zo is (zie ook: [[Grunnegs_(biezundere_woorden)#Tou_lieken|Tou lieken]]
+|Dat liekt mie gain Grönneger tou.
 |-
-|Aine veur de guuchel hoalen 
-''Hest de schoolmeester weer veur de guuchel had?''
+|Aine veur de gugel holden
 |Iemand voor de gek houden
-''Heb je de leraar weer voor de gek gehouden?''
+|Hest schoulmeester weer veur de gugel had?
 |-
-|Ales aine tou handen oet vaalt
-''Alles vaalt mie oet handen''
+|Ales aine tou handen oetvalen
 |Alles gaat mis
-''Alles gaat fout bij mij''
+|Sunt mien schaaiden is ales mie tou handen oetvalen.
 |-
-|Aan de gang wezen 
-''t Feest is al twij uur aan de gang'' 
-|Bezig zijn/begonnen zijn (activiteit)
-''Het feest is al twee uur lang begonnen''
+|Aan de gang wezen
+|Bezig zijn
+|Hai is haile week aan de gang wèst om de boudel veur mekoar te kriegen.
 |-
 |Bie de diek
-''Bie de diek het man ôf en tou woaterlast''
 |Op het Hoogeland
-''Op het Hoogeland hebben ze af en toe wateroverlast''
+|Bie de diek het man ôf en tou wotteroverlast
 |-
-|Bie zummerdag 
-''Bie zummerdag goan wie aaltied noar camping''
-|'s Zomers (ook mogelijk met winter~)
-'''s Zomers gaan we altijd naar de camping''
+|Bie {{naam}} zienent/heurent
+|Bij {{naam}}'s huis/bedrijf
+|Ik waark bie Wubs zienent en wie goan vanoavend noar Kloas zienent veur n feestje.
 |-
-|Dat dut niks 
-''t Dut niks dat zai nait komt''
-|Dat geeft niet
-''Het geeft niet dat ze niet komt''
+|Bie zummerdag/winterdag
+|'s Zomers/'s winters
+|Bie winterdag stoken wie aaltied holt ien de heerd.
 |-
-|Dat is minder
-|Dat is niet al te best
+|Bainen weer onder t lief hebben
+|Weer op de benen zijn (bv. na ziekte)
+|Noa heur operoatsie het zai de bainen nog aaltied nait hailmoal weer onder t lief stoan.
 |-
-|De bainen weer onder t lief hebben
-''Zai het de bainen al weer oareg onder t lief (stoan)''
-|Weer op de been zijn (na ziekte)
-''Zij is alweer aardig op de been/ opgeknapt''
-|-
-|De bokkeproek op hebben, Boeskool eten hebben
-''Zai het bokkeproek op, Zai het boeskool eten''
+|Boeskool eten hebben
 |Chagrijnig zijn
-''Ze is chagrijnig''
+|Zai het dunkt mie boeskool eten, zai kiekt ja zo kwoad.
 |-
-|De doppen moal n zetje dicht doun 
-''Du de doppen mor n zetje dicht''
+|Bokkeproek op hebben
+|Chagrijnig zijn
+|Zai het dunkt mie de bokkeproek op, zai kiekt ja zo kwoad.
+|-
+|De doppen moal/even n zetje dichtdoun
 |Even gaan slapen
-''Ga maar even slapen''
+|Du de doppen moar even zetje dicht, den hest dammiet weer wat meer energie.
 |-
-|De görde goar hebben
-''Dou was hom de görde wel goar''
-|fig: de poppen aan het dansen hebben
-''Toen had je de poppen aan het dansen''
+|De görde/gört goar hebben
+|Fig: De poppen aan het dansen hebben 
+|Dou hai weer te loat was, was bie mie de görde goar
 |-
 |De ìndjes aan mekoar knopen
-''Hai ken de ìndjes nait aan mekoar knopen''
-|fig: Iets onder de knie krijgen/iets begrijpen 
-''Hij snapt er maar niets van''
-|-
-|Der binnen wel ais grotere schepen vergoan
-|Het kan erger
-|-
-|Der komt n schip mit zoere appels aan
-|Er komt slecht weer aan/ er staat iets ergs te gebeuren
+|Iets onder de knie krijgen/iets begrijpen
+|k Heb t vief keer oetlègd, moar hai kin de ìndjes moar nait aan mekoar knopen.
 |-
 |Der oet zain as n koater ien meertmoand
-''Veur dat gala is er net n koater ien meertmoand''
-|Er opgedofd uitzien
-''Voor dat gala heeft hij zich heel netjes opgedofd''
+|Er opgedoft uitzien
+|Op t gala zag er der oet as n koater ien meertmoand.
 |-
-|Dij ien t schip zit mout voaren
-|Als je ergens aan begint, moet je het ook afmaken
+|Dik doun
+|Belangrijk/decadent doen
+|Mien noaber dut aaltied hail dik over zien woagens.
 |-
-|Dik doun ien toen
-''Wie goan vanoavend even lekker dik doun ien toen''
-|Barbequen
-''Wij gaan vanavond barbequen''
-|-
-|Er
-''Dat het er ook doan''
-|Ie
-''Dat heeft ie ook gedaan''
-|-
-|Hai hai
-|Nou nou
-|-
-|Hou dat?
-'''''A''': Os pa ligt ien zaikenhoes. '''B''':Hou dat den?''
-|Hoezo?
-'''''A''': Mijn vader ligt in het ziekenhuis. '''B''': Hoezo/waarom dan?''
+|...{{waarkwoord}} er (sums wordt de r nait oetsproken)
+|...{{werkwoord}} ie
+|Dat het er al zain.
 |-
 |Goud wies wezen
-''Bist wel goud wies?''
-|Goed bij je hoofd zijn
-''Ben je wel goed bij je hoofd?''
+|Goed bij je hoofd
+|Bist wel goud wies? Gaaist toch nait mit stainen goeien!
 |-
-|Haalf put, haalf regenwoater
-|fig: Geen vlees, geen vis 
+|Hai hai
+|Tsjonge
+|Hai hai, wat ja weer n drokte!
 |-
-|Haiten van ...
-''Mien moe hait van Antje''
-|Heten ...
-''Mijn moeder heet Antje''
+|Haiten van
+|Heten
+|Mien moe hait van Antje.
 |-
-|Heksen kennen
-''Ik ken nait heksen''
-|Van alles te gelijk doen
-''Ik kan niet alles tegelijk''
-|-
-|Hest in t mous lopen?
-|fig: Heb je een klap van de molenwiek gehad?
-lett: Heb je in het boerenkoolveld gelopen?
+|Heksen kinnen
+|Alles te gelijk kunnen in een zeer korte tijd
+|Rusteg! Ik kin nait heksen!
 |-
 |Hom mans had hebben
-''Hai het hom mans had''
-|De schuld hebben/het gedaan hebben
-''Hij heeft het gedaan/het is zijn schuld''
+|Het gedaan hebben/de schuld hebben
+|Mien bloumvoas is stukkend en ik wait dunkt mie wel, wel of t hom mans had het.
+|-
+|Hou dat?
+|Hoezo?/Waardoor komt dat? 
+|'''A''': Os pa ligt ien t zaikenhoes. '''B''': Hou dat den?
 |-
 |Hou wordt t?
 |Hoe gaat het?
+|Moi, hou wordt t mit die?
 |-
-|Kirrel lood!
-''Kirrel lood, wat was dat ja n ìnde sjaauwen!'' 
-|''Uitroep na een grote lichamelijke prestatie.''
-''Zo, wat wat dat ver lopen zeg!''
+|Kerel/kirrel lood!
+|''Uitroep na een zware lichamelijke prestatie''
+|Kerel lood, wat was dat n ìnde sjaauwen!
 |-
 |Kört van kop wezen
-''Dij oal kirrel is kört van kop''
-|Snel aangebrand (kwaad) zijn
-''Dij oude man wordt snel boos''
+|Snel aangebrand (chagrijnig) zijn
+|Man zègt dat boeren aaltied kört van kop binnen.
 |-
-|Liek wezen 
-''Wie binnen weer liek''
-|fig: Quitte staan, let: recht zijn
-''We staan weer quitte''
+|Liek wezen
+|Quitte staan
+|Ik heb die betoald, nou stoan wie liek.
 |-
 |Mankeert die wat aan de ...?
-''Mankeert die wat aan de ogen, oren, etc?''
-|Ben je ...?
-''Ben je blind, doof, etc?''
+|Heb je last van je ...?
+|Ik zee toch van nee. Mankeert die toch niks aan de oren.
 |-
-|Mit ainander ien ain schip kommen
-''Noa twij uur kwammen wie ìndelk mit ainander ien ain schip''
-|Overeenstemming bereiken
-''Na twee uur waren we het eindelijk met elkaar eens''
+|Mit nander ien ain schip kommen
+|Tot overeenstemming komen
+|Op dat onderwaarp konden wie nait mit nander ien ain schip kommen
 |-
 |Moin dokter!
-''<nowiki>{{der lopt n hail dik persoon over stroat en A zugt dat.}}</nowiki> '''A''': Moin dokter! Wat n dikke kloede!'' 
-|''uitroep na enorme verbazing, zoals bv. "Jezus Christus!"''
-''<nowiki>{{er loop een heel dik persoon over straat en A ziet dat.}}</nowiki> Jezus Christus! Wat een dikkert.''
+|''Uitroep na enorme verbazing, vergelijkbaar met "Jezus Christus!"''
+|Moin dokter! Wat is dij vraauw ja dik worden.
+|-
+|Minder wezen
+|Niet al te best zijn
+|A: Ik krieg gain vakansiegèld. B: Oh, dat is minder!
 |-
 |Nait (goud) te pas wezen
-''Dij ol kirrel is nait meer goud te pas''
-|Niet toerekeningsvatbaar zijn
-''Die man is niet meer toerekeningsvatbaar'' 
+|Niet geestelijk gezond zijn 
+|Bier mit ranja der deurhìn? Bist nait goud te pas, jong.
 |-
-|Nou brekt mie de klomp(e)!
-|Fig: Schiet mij maar lek!; let: nu breekt bij mij de klomp 
-|-
-|Nuig joe nait!
-|Tast toe! 
+|Niks doun
+|Niet uitmaken/erg zijn
+|t Dut niks of ik nou wel of gain kovvie krieg.
 |-
 |Om deel
-''Mien klevaaier vuil om deel van dak ôf''
 |Naar beneden
-''Mijn piano viel van het dak naar beneden''
+|Mien klevaaier veul van t dak om deel.
 |-
-|Om toch
-'''''A''':Woarom gaaist nait mit? '''B''':Om toch nait.''
-|Daarom
-'''''A''':Waarom ga je niet mee? '''B''':Daarom niet.''
-|-
-|Onder de pannen wezen 
-''Dit weekend binnen wie wel weer onder de pannen''
-|Ergens mee bezig zijn
-''Dit weekend hebben we wel weer genoeg te doen''
+|Onder de pannen wezen
+|Iets te doen hebben
+|Wie binnen t haile weekìnde onder de pannen mit drij verjoardoagen.
 |-
 |Op zeer kommen
-''t Komt hom slim op zeer as joe over heur schaaiden proaten''
-|Gevoelig liggen (emotioneel)
-''Hun scheiding ligt nogal gevoelig''
-|-
-|... zienent/heurent
-''Wie goan vandoag noar Kloas zienent tou''
-''Ik waark bie Wubs zienent''
-|...'s huis/bedrijf
-''We gaan vandaag naar het huis van Klaas''
-''Ik werk bij (boer/ het bedrijf) Wubs''
+|Fig: Een gevoelige snaar raken (zowel qua woede als verdriet)
+|Proaten over zien overleden vraauw komt hom op zeer
 |-
 |Schelden kriegen
-''Hest nog schelden had veur dij broken voas?'' 
-|Op je kop krijgen
-''Heb je nog op je kop gekregen voor die gebroken vaas?''
-|-
-|Slicht zat
-|Helemaal vol ''(van het eten)''
+|Op de kop krijgen (als je iets fouts hebt gedaan)
+|Ik heb schelden had van mien noaber omdat ik n baal deur zien roet schopt haar.
 |-
 |Te pas kommen
-''Kom ik te pas?''<br />
-''Dit komt mie nait goud te pas''
-|Gelegen komen, uitkomen
-''Kom ik gelegen?''<br />
-''Dit komt mij niet goed uit''
+|Gelegen komen
+|Kommen wie te pas of zellen wie mörn even weerkommen?
 |-
-|t Der om doun
-''Dat dut hai der om''
-|Iets met opzet doen
-''Dat doet hij expres''
-|-
-|t Nait oet de bainen snieden kinnen
-''Ik kin t noa mien vakaansie nait meer oet de bainen snieden''
-|Het geld ergens niet voor hebben
-''Na die vakantie heb ik er geen geld meer voor/kan ik niet meer rondkomen''
-|-
-|Wat om de kont trekken 
-''Dij oal plunnen trek ik nait om de kont''
-|Iets aan doen (kleding)
-''Die oude vodden doe ik niet aan''
-|-
-|Wat aachter de koezen hebben 
-''Ik heb t plakkie kouk al achter de koezen''
-|Iets op hebben (eten)
-''Ik heb het plakje koek al op''
-|-
-|Weeromgoan 
-''Dit is mie de link, ik gai weerom''
-|Teruggaan
-''Dit lijkt mij te gevaarlijk, ik ga weer terug''
-|-
-|tot ... oet/uut
-''Zai hebben n plaank tot schut oet''
+|tot/tou ... oet
 |uit ...
-''Zij hebben een plank uit het hek''
+|Zai hebben n plaank tou schut oet
 |-
-|Tot twij moal tou 
-''Hest mie dat tot twij moal tou flikt''
-|Twee keer
-''Je hebt bij dit al twee keer geflik''
+|tot ... moal tou
+|... keer
+|Ik heb t nou al tot drij moal tou zègd.
 |-
-|Wat veur geefs <div>
-''Dit boukie is veur geefs''<div>
-''Dat bred staait der nait veur geefs''
-|Iets dat gratis is
-Iets voor niks zijn
-''Dit boekje is gratis''<div>
-''Dat bord staat er niet voor niets''
+|Wat aargens om doun
+|Iets met opzet doen
+|Hai dut t der om, want hai wait dat ik doar nait tegen kin.
 |-
-|Wat lieden maggen 
-''Dit behang mag ik niet lieden''
-|Iets mooi vinden staan (kleding/interieur)
-''Dit behang vind ik niet mooi''
+|Wat achter de koezen hebben
+|Iets op hebben (voedsel)
+|Toun er op t diner kwam, haar er al n plak stoet achter de koezen.
+|-
+|Wat lieden maggen
+|Iets mooi vinden staan (kleding, interieur, etc.)
+|Dit behang mag ik nait lieden.
+|-
+|Wat nait oet de bainen snieden kinnen
+|Iets niet kunnen veroorloven (qua geld)
+|Ik kin n nije keuken nou nait oet de bainen snieden
+|-
+|Wat om de kont trekken
+|Iets aan doen (kledingstuk)
+|Dij olle plunnen trek ik nait om de kont!
+|-
+|Wat om t hoes stoan hebben
+|Iets bij huis hebben staan
+|Bie dij mìnzen staait aaltieds n haile dikke woagen om t hoes.
+|-
+|Wat veur geefs (1)
+|Iets gratis
+|Dit boukje kriegen joe veur geefs.
+|-
+|Wat veur geefs (2)
+|Iets voor niets
+|De regels binnen der nait veur geefs.
+|-
+|Weerom goan
+|Terug gaan
+|Dat is mie te link, ik gai weer om.
 |}
+
+== Oetdrokkens ==
+t Gaait hier veuraal om figuurliekse zinnen en zegswiezen dij op zokzulf n zin vörmen.
+
+* Ain stain kin gain mostert moalen - Je kunt meer met z'n tweeën dan alleen
+* Aine kin boeren, aander nait - Je hebt het of je hebt het niet
+* Der binnen wel ais grotere schepen vergoan - Het had erger gekund
+* Der komt n schip mit zoere appel aan - Er staat weer iets slechts te gebeuren
+* Dij (wel) ien t schip zit, mout voaren - Als je ergens aan begint, moet je het afmaken
+* Haalf put, haalf regenwotter - Fig: Geen vis, geen vlees. 
+* Hest ien t mous lopen? - Fig: Heb je een klap van de molenwiek gehad?
+* Kon minder - Goed!
+* Nou brekt mie de klomp. - Fig: Nou, schiet mij maar lek.
+* Nuig joe nait! - Tast toe!
+* Om toch! - Daarom! (Nietszeggend antwoord na een vraag met "waarom")
 
 == Vergeliekens ==
 {| {{prettytable}} width="70%"
