*Empty MediaWiki Message*

--- a/Grunnegs_(zegswiezen).mw
+++ b/Grunnegs_(zegswiezen).mw
@@ -85,8 +85,8 @@ Dit binnen zegswiezen dij ien gewone, aaldoagse zinnen veurkommen. Hierbie moute
 |Op het Hoogeland
 |Bie de diek het man ôf en tou wotteroverlast
 |-
-|Bie {{naam}} zienent/heurent
-|Bij {{naam}}'s huis/bedrijf
+|Bie <nowiki>{{naam}}</nowiki> zienent/heurent
+|Bij <nowiki>{{naam}}</nowiki>'s huis/bedrijf
 |Ik waark bie Wubs zienent en wie goan vanoavend noar Kloas zienent veur n feestje.
 |-
 |Bie zummerdag/winterdag
@@ -125,8 +125,8 @@ Dit binnen zegswiezen dij ien gewone, aaldoagse zinnen veurkommen. Hierbie moute
 |Belangrijk/decadent doen
 |Mien noaber dut aaltied hail dik over zien woagens.
 |-
-|...{{waarkwoord}} er (sums wordt de r nait oetsproken)
-|...{{werkwoord}} ie
+|...<nowiki>{{waarkwoord}}</nowiki> er (sums wordt de r nait oetsproken)
+|...<nowiki>{{werkwoord}}</nowiki> ie
 |Dat het er al zain.
 |-
 |Goud wies wezen
