--- a/Grunnegs_(zegswiezen).mw
+++ b/Grunnegs_(zegswiezen).mw
@@ -183,7 +183,7 @@ Dit binnen zegswiezen dij ien gewone, aaldoagse zinnen veurkommen. Hierbie moute
 |-
 |Minder wezen
 |Niet al te best zijn
-|A: Ik krieg gain vakansiegèld. B: Oh, dat is minder!
+|'''A''': Ik krieg gain vakansiegèld. '''B''': Oh, dat is minder!
 |-
 |Nait (goud) te pas wezen
 |Niet geestelijk gezond zijn 
