--- a/Nedersaksisch_A.mw
+++ b/Nedersaksisch_A.mw
@@ -52,7 +52,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit A begunt''' oet 't [[Neders
 **''ekbei/-beer'' (Platduutske skriefwies: ''Eckbeei/-beer'')
 * [[Sallaans]]: ...
 * [[Stellingwarfs]]: '''''[[erebeie]]'''''
-* [[Tweants]]: ''earbeaze'' ([[Riesns]])
+* [[Tweants]]:
+** ''earbeaze'' ([[Riesns]])
+** ''earberre'' ([[Eanskes]])
 * [[Urkers]]: ''arrebuie''
 * [[Veluws]]: 
 **''eer{{small()|d}}bees, -beze, -bèze''
