--- a/Nedersaksisch_A.mw
+++ b/Nedersaksisch_A.mw
@@ -133,7 +133,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit A begunt''' oet 't [[Neders
 **''appelmots'' 
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: '''''[[Appelsmotse]]'''''
-*[[Tweants]]: ...
+*[[Tweants]]: appelprötske ([[Eanskes]])
 *[[Urkers]]: ...
 *[[Veluws]]: 
 **''kreus'' ([[Putten]])
