--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -472,7 +472,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''Hammer''
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
-*[[Tweants]]: ...
+*[[Tweants]]: ''noaberschop''
 *[[Urkers]]: ...
 *[[Veluws]]: ...
 
