Versie 165233 van [[Special:Contributions/Grönneger 1|Grönneger 1]] ([[User talk:Grönneger 1|overleg]]) weerummedreid. Of wol-ie t vort hebben?

--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -74,6 +74,12 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 **''brood'' ([[Wenum-Wiesel]], [[Epe]])
 **''kroggen'' ([[Oldebroek]], [[Nunspeet]])
 
+==Riek==
+*[[Nederlands]]: ''riek''
+
+*[[Achterhooks]]: 
+**''grepe''
+
 ==Rijden==
 *[[Nederlands]]: ''rijden''
 
