--- a/Nunspeet.mw
+++ b/Nunspeet.mw
@@ -49,7 +49,7 @@ Ze preberen dit doel ondermeer te bereiken deur:
 * alle overige wettelijke middels
 
 ==Recreasie en toerisme==
-Een belangrieke bron van inkomsen veur Nunspeet is recreasie en [[toerisme]]. De gemeente Nunspeet is een mooie plekke um vekaansie te houwen, umda-j der [[bos]], [[waoter]], [[heed]] en [[zaandverstuving]]en hemmen. Der bin allerhaande campings en der is een hotelletjen.
+Een belangrieke bron van inkomsen veur Nunspeet is recreasie en [[toerisme]]. De gemeente Nunspeet is een mooie plekke um vekaansie te houwen, umda-j der [[bos]], [[waoter]], [[heed (vegetasie)|heed]] en [[zaandverstuving]]en hemmen. Der bin allerhaande campings en der is een hotelletjen.
 
 Bie 't stesjon he-j de Oudheidkamer van Nunspeet zitten, mit allerhaande spul van vrogger. In 't darp zit 't [[Veluws Diorama]], een historisch museum. Op [[21 jannewaori]] [[2009]] sleug der braand uut.
 
