[[heed]] → [[heed (vegetasie)]]

--- a/Donkerbroek.mw
+++ b/Donkerbroek.mw
@@ -3,7 +3,7 @@
 
 Donkerbroek is ien van de ooldste [[nederzetting]]en in Zuudoost-Frieslaand. De ooldste vermelding van et dörp staot in twie [[oorkonde]]s van [[13 juli]] en [[15 juli]] [[1408]] over een geschil mit de [[Bisschop van Utrecht]] over de huur van hujlanen. In de oorkondes wodt et dörp ''Dungebroek'' en ''Dongbroec'' nuumd. 
 
-Langes Donkerbroek lopt de toeristische route ''De [[Friese Woolden]]''. Deur et dörp lopt een [[kenaol]] dat diel uutmaekt van de ''Turfroute''. Rondomtoe Donkerbroek bin uutstrekte [[bos]]sen en [[heed|heidevelden]]. 
+Langes Donkerbroek lopt de toeristische route ''De [[Friese Woolden]]''. Deur et dörp lopt een [[kenaol]] dat diel uutmaekt van de ''Turfroute''. Rondomtoe Donkerbroek bin uutstrekte [[bos]]sen en [[heed (vegetasie)|heidevelden]]. 
 
 In Donkerbroek wodt van oorsprong [[Stellingwarfs]] praot. In de [[20e eeuw|20e ieuw]] ontston een starke [[Fries]]e invloed. Rond Donkerbroek bin vri'j veul [[prehistorie|prehistorische]] [[archeologie|voonsten]] daon, mit naeme uut de [[bronstied]]. Now is hiervan op loopofstaand van et dörp overbleven et laandgoed Ontwiek. Hier is op een beparkte oppervlakte een staolkaorte van et vroggere laandschop weeromme te vienen in de vorm van bos, lanen, heide en veenties. Ok bin d'r resten van een wielerbaene en een eupenlochttheater. In de bos leven een tiental reeën en vule soorten bosvoegels. De veenties harbargen brune en grune kikkers en [[glaozemakers|waeterjuffers]] as viervlekke, noordse witsnute en grote keizer.
 
