--- a/Elspeet.mw
+++ b/Elspeet.mw
@@ -4,7 +4,7 @@
 Wule weten neet krek wat de naam ''Elspeet'' betekent. ''El'' wonnen wel in verbaand ebröch mit ''oud'' en ''speet'' verwies naor ontginning, ummespitten grond. Een aandere uutleg is dat 't van doon hef mit ''[[elze]]n'' (soort bomen).
  
 ==Toerisme==
-'t [[toerisme|Toeristische]] darp lig zo'n tien kilemeter in 't zujen van Nunspeet en zo'n vier kilemeter in 't noorden van 't darp [[Uddel]], op de noordelijke [[Veluwe]]. Dat Elspeet zujelijker lig as Nunspeet, ku-j oek an sommige taalkundige verschiensels zien, in Elspeet zegen ze veur 't Nederlaanse ''ladder'' bieveurbeeld: ''lere'' in Nunspeet is dat: ''ledder'' (vergeliek mit [[Putters]]: ''leer''). 't Darp lig in een [[laandbouw]]enclave, umringd deur [[bos]] en [[heed]]. Der bin dree campings in Elspeet.
+'t [[toerisme|Toeristische]] darp lig zo'n tien kilemeter in 't zujen van Nunspeet en zo'n vier kilemeter in 't noorden van 't darp [[Uddel]], op de noordelijke [[Veluwe]]. Dat Elspeet zujelijker lig as Nunspeet, ku-j oek an sommige taalkundige verschiensels zien, in Elspeet zegen ze veur 't Nederlaanse ''ladder'' bieveurbeeld: ''lere'' in Nunspeet is dat: ''ledder'' (vergeliek mit [[Putters]]: ''leer''). 't Darp lig in een [[laandbouw]]enclave, umringd deur [[bos]] en [[heed (vegetasie)|heed]]. Der bin dree campings in Elspeet.
 
 Elspeet steet oek bekend um de schaapskudde. De kudde besteet uut 160 [[schaap|schapen]] dee verzörg en eheuid wonnen deur 't echpaor Cos en Christien Mouw. Op de eerste zaoterdag in [[juli]] is der oek 't schaapscheerdersfees, waobie de vach van de schapen tredisioneel mit de [[knipschere]] derof ehaold wonnen.
 
